Bring TRS capes, badges and cape physics to Forge 1.8.9-1.12.2
Without mixins the legacy builds write the TRS cape into the player's tab
list entry (cape and, from 1.9, elytra pick it up from there), prefix the
tab list display name and the name tag (PlayerEvent.NameFormat) with a
dark red square, and replace the vanilla cape layer of both player
renderers with a cloth layer that falls back to the original one. Private
fields are found by type, so the release jars need no SRG names.

Nothing in the online features may ever crash the game: errors in the
tick, the texture upload or the cape rendering are logged at most once a
minute and the vanilla cape is drawn instead.